<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GU_android_HW</string>
    <string name="city_moscow">Moscow</string>
    <string name="unit" translatable="false">%1$s</string>
    <string name="g" translatable="false">\u00b0</string>
    <string name="gradus">\u2103</string>
    <string name="farengeit">\u2109</string>
    <string name="city_kazan">Kazan</string>
    <string name="city_orenburg">Orenburg</string>
    <string name="city_tver">Tver</string>
    <string name="city_rostov">Rostov</string>
    <string name="wind_speed">wind speed</string>
    <string name="atmosphere_pressure">pressure</string>
    <string name="submit">Submit</string>
    <string name="select_info_to_show">Select info to show</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="temperature">Temperature</string>
    <string name="m_sec">m/sec</string>
    <string name="mm_rt_st">mm.rt.st</string>
    <string name="enter_city">Enter city</string>
    <string name="dark_theme">dark</string>
    <string name="rus">rus</string>
    <string name="cels">cels</string>
    <string name="humidity">humidity</string>
    <string name="city">city</string>
    <string name="percent">\u0025</string>
    <string name="weahter">weather</string>
    <string name="about">about</string>
    <string name="about_developer">developer Maria L\ncreated: 2020</string>
    <string name="menu_home">home</string>
    <string name="menu_map">Geo Location</string>
    <string name="menu_slideshow">slideshow</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="incorrect_name">City with such name is not exists!</string>
    <string name="button">OK</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear_all">Clear all</string>
    <string name="title_activity_maps">Map</string>


</resources>
