<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/sky1"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_city"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#B7C5C0C2" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_info_to_show"
            android:textColor="#050505"
            android:textSize="35dp" />

        <CheckBox
            android:id="@+id/windSpeedCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textSize="35dp" />

        <CheckBox
            android:id="@+id/pressureCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atmosphere_pressure"
            android:textSize="35dp" />

        <Button
            android:id="@+id/submit_buton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/submit"
            android:textSize="35dp" />

    </LinearLayout>
</FrameLayout>