<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="40dp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textSize="40dp"
                android:layout_weight="1"/>
            <TableRow
                android:layout_weight="2"
                android:layout_gravity="bottom">
                <CheckBox
                    android:text="light"
                    android:textSize="25dp"/>

            </TableRow>
            <TableRow
                android:layout_weight="2"
                android:layout_gravity="bottom">
                <CheckBox
                    android:text="dark"
                    android:textSize="25dp"/>
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="40dp"
                android:layout_weight="1"/>
            <TableRow
                android:layout_weight="2"
                android:layout_gravity="bottom">
                <CheckBox
                    android:text="rus"
                    android:textSize="25dp"/>

            </TableRow>
            <TableRow
                android:layout_weight="2"
                android:layout_gravity="bottom">
                <CheckBox
                    android:text="eng"
                    android:textSize="25dp"/>
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="40dp"
                android:layout_weight="1"/>
            <TableRow
                android:layout_weight="2"
                android:layout_gravity="bottom">
                <CheckBox
                    android:text="Celsium"
                    android:textSize="25dp"/>

            </TableRow>
            <TableRow
                android:layout_weight="2"
                android:layout_gravity="bottom">
                <CheckBox
                    android:text="Farengeith"
                    android:textSize="25dp"/>
            </TableRow>
        </TableRow>
    </TableLayout>
</LinearLayout>